--- a/.env.properties
+++ b/.env.properties
@@ -1,5 +1,5 @@
 #Change manually
-GITPOD_FRONTEND_URL=
+GITPOD_FRONTEND_URL=https://4200-furkangurbu-valtimofron-tecehalvtam.ws-eu115.gitpod.io/
 
 #Don't change
 SPRING_PROFILES_ACTIVE=default
